wip coded createTransferCode, next is ownership and unit tests
